--- a/views/index.hbs
+++ b/views/index.hbs
@@ -20,7 +20,7 @@
 
                     <div class="col-md-6 col-12 mt-5 hero-img order-md-1 order-0">
                         <figure class="figure" >
-                            <img  src="images/him.png" alt="hero_picture">
+                            <img  src="images/my.png" alt="hero_picture">
                         </figure>
                     </div>
                 </div>
