--- a/views/index.hbs
+++ b/views/index.hbs
@@ -18,9 +18,9 @@
 
                 {{!-- right section  --}}
 
-                    <div class="col-md-6 col-12 mt-5 hero-img order-md-1 order-0">
+                    <div class="col-md-6 col-12 hero-img order-md-1 order-0">
                         <figure class="figure" >
-                            <img  src="images/my.png" alt="hero_picture">
+                            <img class="ms-5" src="images/my.png" alt="hero_picture">
                         </figure>
                     </div>
                 </div>
