--- a/views/index.hbs
+++ b/views/index.hbs
@@ -10,9 +10,9 @@
                     
                     <div class="col-md-6 col-12 mt-5 hero-text order-md-0 
                      order-1 d-flex flex-column justify-content-center align-items-start flex-coloumn">
-                        <h1>Hi, I'm HIMANSHU ANAND </h1>
-                        <h1>Full Stack Developer </h1>
-                        <p>We Are The Team Of <span >Professional Developers😘</span> </p>
+                        <h1>Hey, This is me </h1>
+                        <h1>HIMANSHU ANAND</h1>
+                        <p>I'm Himanshu Anand.A Full Stack Developers and Software Developer.  With A Solid Foundation In Programming Languages Such A C++, JavaScript & React. </p>
                         <button type="button" class="btn btn-style mt-3">Read Me</button>
                     </div>
 
