--- a/views/index.hbs
+++ b/views/index.hbs
@@ -10,10 +10,10 @@
                     
                     <div class="col-md-6 col-12 mt-5 hero-text order-md-0 
                      order-1 d-flex flex-column justify-content-center align-items-start flex-coloumn">
-                        <h1>Hey, This is me </h1>
+                        <h3>Hey, This is me </h3>
                         <h1>HIMANSHU ANAND</h1>
                         <p>I'm Himanshu Anand.A Full Stack Developers and Software Developer.  With A Solid Foundation In Programming Languages Such A C++, JavaScript & React. </p>
-                        <button type="button" class="btn btn-style mt-3">Read Me</button>
+                        <a href="https://drive.google.com/file/d/1xra_BcHYCsmcD3roJ0lAAbY_PC54Vmnv/view?usp=drive_link" class="btn btn-style mt-3">Resume</a>
                     </div>
 
                 {{!-- right section  --}}
