--- a/views/templates/navbar.hbs
+++ b/views/templates/navbar.hbs
@@ -33,7 +33,7 @@
                 <a class="nav-link" href="#service">Service</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#gallery">Gallery</a>
+                <a class="nav-link" href="#Portfolio">Portfolio</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="/contact">Contact</a>
