--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,6 +1,6 @@
 
     {{>navbar}}
-    {{!-- <h1>Home Page</h1> --}}
+
     {{!-- herosection  --}}
     <div class="container-fluid mt-5">
         <div class="row">
@@ -37,4 +37,9 @@
     {{!-- map section  --}}
     {{>map}}
 
+    {{!-- contact section  --}}
+    {{>contact}}
+
+    {{!-- footer section  --}}
     {{>footer}}
+
