--- a/public/css/style.css
+++ b/public/css/style.css
@@ -53,7 +53,7 @@ h3 {
   color: #525252;
   text-transform: capitalize;
   letter-spacing: 0.1rem;
-  padding-left: 1rem;
+  padding-left: 1.8rem;
   font-size: 1.9rem;
 }
 
@@ -246,7 +246,7 @@ label {
 
 /* footer sections ends  */
 
-footer {
+/* footer {
   background: #dfece8;
 }
 
@@ -255,6 +255,26 @@ footer p {
   margin: 0;
   text-align: center;
   font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+} */
+
+.footer {
+  background-color: #d66d6d;
+  color: #000000;
+  padding: 20px;
+  text-align: center;
+}
+
+/* Social Media Icons */
+.social-icons {
+  margin-top: 10px;
+}
+
+
+.social-icons a {
+  color: rgb(0, 0, 0)909;
+  /* text-decoration: none; */
+  margin: 0 10px;
+  /* font-size: 1rem; */
 }
 
 /* media queries part starts here  */
