--- a/views/templates/contact.hbs
+++ b/views/templates/contact.hbs
@@ -1,5 +1,5 @@
-{{>navbar}}
-<div class="container-fluid mt-0 contact-style">
+{{!-- {{>navbar}} --}}
+<div class="container-fluid mt-0 contact-style" id="contact">
   <div class="row">
     <div class="col-md-10 col-12 mx-auto">
       <div class="row">
@@ -32,4 +32,4 @@
     </div>
   </div>
 </div>
-{{>footer}}
+{{!-- {{>footer}} --}}
