--- a/views/templates/footer.hbs
+++ b/views/templates/footer.hbs
@@ -1,8 +1,9 @@
-<script src="../jq/jquery.js" type="text/javascript"></script>
+   <script src="../jq/jquery.js" type="text/javascript"></script>
     <script src="../js/bootstrap.js" type="text/javascript"></script>
 
-    <footer> 
-        <p>copyrights@ 2023</p>
+    <footer class="footer">
+        <div>&copy; 2023 Himanshu Portfolio. All rights reserved.</div>
+        <i class="fa-brands fa-github"></i>
     </footer>
 </body>
 </html>
