--- a/views/templates/navbar.hbs
+++ b/views/templates/navbar.hbs
@@ -33,10 +33,10 @@
                 <a class="nav-link" href="#service">Service</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#Portfolio">Portfolio</a>
+                <a class="nav-link" href="#gallery">Portfolio</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/contact">Contact</a>
+                <a class="nav-link" href="#contact">Contact</a>
               </li>
 
             </ul>
