--- a/views/index.hbs
+++ b/views/index.hbs
@@ -12,7 +12,8 @@
                      order-1 d-flex flex-column justify-content-center align-items-start flex-coloumn">
                         <h3>Hey, This is me </h3>
                         <h1>HIMANSHU ANAND</h1>
-                        <p>I'm Himanshu Anand.A Full Stack Developers and Software Developer.  With A Solid Foundation In Programming Languages Such A C++, JavaScript & React. </p>
+                        <h2> Full Stack Developers and Software Developer</h2>
+                        {{!-- <p>I'm Himanshu Anand.A Full Stack Developers and Software Developer.  With A Solid Foundation In Programming Languages Such A C++, JavaScript & React. </p> --}}
                         <a href="https://drive.google.com/file/d/1xra_BcHYCsmcD3roJ0lAAbY_PC54Vmnv/view?usp=drive_link" class="btn btn-style mt-3">Resume</a>
                     </div>
 
@@ -34,11 +35,14 @@
     {{!-- service section   --}}
     {{>service}}
 
-    {{!-- map section  --}}
-    {{>map}}
+    {{!-- projects.section  --}}
+    {{>projects}}
 
     {{!-- contact section  --}}
     {{>contact}}
+
+    {{!-- map section  --}}
+    {{>map}}
 
     {{!-- footer section  --}}
     {{>footer}}
