--- a/views/templates/about.hbs
+++ b/views/templates/about.hbs
@@ -3,7 +3,7 @@
     <div class="col-md-10 col-12 mx-auto">
       <h1 class="text-center main-heading">About Us</h1>
 
-      <p class="text-center sub-heading">grow your business with us</p>
+      {{!-- <p class="text-center sub-heading">grow your business with us</p> --}}
       <div class="row">
         {{! left section  }}
         <div class="col-md-6 col-12 hero-img order-0">
@@ -17,13 +17,10 @@
         <div
           class="col-md-6 col-12 mt-5 order-1 hero-text d-flex flex-column justify-content-center align-items-start flex-coloumn"
         >
-          <h1>WE ARE THE PROFESSIONAL DEVELOPER 🔥</h1>
-          <p>Welcome To
-            <span class="bold-style">HEEMAN</span>, Your Number One Source For
-            All The Thing. We're Dedicated To Giving You The Best Of Work, With
-            A Focus On [Three Characteristics: Dependability, Customer Service &
-            Uniqueness.]</p>
-          <button type="button" class="btn btn-style mt-3">Read Me</button>
+          <p>I'm a passionate and creative web developer with a strong foundation in both front-end and back-end technologies. My journey into the world of web development started when I discovered the power of turning ideas into interactive and engaging digital experiences.</p>
+                <p>As a developer, I thrive on solving complex problems and creating solutions that make a positive impact. With a keen eye for design and a commitment to writing clean, efficient code, I aim to craft user-centered websites and applications that are both functional and aesthetically pleasing.</p>
+                
+          <button type="button" class="btn btn-style mt-5">Read Me </button>
         </div>
       </div>
     </div>
