--- a/views/templates/contact.hbs
+++ b/views/templates/contact.hbs
@@ -25,7 +25,7 @@
               <label for="inputMessage">Message</label>
               <input type="text" class="form-control" name="message" id="inputMessage" placeholder="Message">
             </div>
-            <button type="submit" class="btn-style btn-primary mt-5">Submit</button>
+            <button type="button" class="btn btn-style mt-3">Submit</button>
           </form>
         </div>
       </div>
