--- a/views/templates/service.hbs
+++ b/views/templates/service.hbs
@@ -2,8 +2,8 @@
   <div class="row">
     <div class="col-md-10 col-12 mx-auto">
       <div class="row">
-        <h1 class="text-center main-heading">Our Services</h1>
-        <p class="text-center sub-heading">grow your business with us</p>
+        <h1 class="text-center main-heading">My Skills</h1>
+        {{!-- <p class="text-center sub-heading">grow your business with us</p> --}}
         <div class="col-md-4">
             <col class="box">
             <div class="our-services settings">
