--- a/views/index.hbs
+++ b/views/index.hbs
@@ -33,7 +33,7 @@
     {{>about}}
 
     {{!-- service section   --}}
-    {{>service}}
+    {{!-- {{>service}} --}}
 
     {{!-- projects.section  --}}
     {{>projects}}
