--- a/views/templates/projects.hbs
+++ b/views/templates/projects.hbs
@@ -3,51 +3,55 @@
     <div class="col-md-10 col-12 mx-auto">
       <div class="row">
         <h1 class="text-center main-heading">Projects</h1>
-        {{! <p class="text-center sub-heading">grow your business with us</p> }}
+
         <div class="col-md-4">
-          <col class="box" >
-          <div class="card our-services settings">
-            <img
-              class="card-img-top"
-              src="images/green.png"
-              alt="Card image cap"
-            />
-            <div class="card-body">
-              <h4>Keep-app</h4>
-              <p class="card-text">Some quick example text to build on the card
-                title and make up the bulk of the card's content.</p>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <col class="box" >
-          <div class="card our-services backups">
-            <img
-              class="card-img-top"
-              src="images/green.png"
-              alt="Card image cap"
-            />
-            <div class="card-body">
-              <h4>Tindog</h4>
-              <p class="card-text">Some quick example text to build on the card
-                title and make up the bulk of the card's content.</p>
-            </div>
+          <div class="box" >
+            <a href="https://keeper-app123.netlify.app/">
+              <div class="card our-services settings">
+                <img
+                  class="card-img-top"
+                  src="images/keep.png"
+                  alt="Card image cap"
+                />
+                <div class="card-body">
+                  <h4>Keep-app</h4>
+                </div>
+              </div>
+            </a>
           </div>
         </div>
 
         <div class="col-md-4">
-          <col class="box" >
-          <div class="card our-services database">
-            <img
-              class="card-img-top"
-              src="images/green.png"
-              alt="Card image cap"
-            />
-            <div class="card-body">
-              <h4>Log-in page</h4>
-              <p class="card-text">Some quick example text to build on the card
-                title and make up the bulk of the card's content.</p>
-            </div>
+          <div class="box">
+            <a href="https://bblackskulll063.github.io/TinDog/">
+              <div class="card our-services backups">
+                <img
+                  class="card-img-top"
+                  src="images/tindog.png"
+                  alt="Card image cap"
+                />
+                <div class="card-body">
+                  <h4>Tindog</h4>
+                </div>
+              </div>
+            </a>
+          </div>
+        </div>
+
+        <div class="col-md-4">
+          <div class="box">
+            <a href="https://bblackskulll063.github.io/login-page/">
+              <div class="card our-services database">
+                <img
+                  class="card-img-top"
+                  src="images/login.png"
+                  alt="Card image cap"
+                />
+                <div class="card-body">
+                  <h4>Log-in page</h4>
+                </div>
+              </div>
+            </a>
           </div>
         </div>
 
