add notebook project

--- a/views/templates/projects.hbs
+++ b/views/templates/projects.hbs
@@ -6,15 +6,15 @@
 
         <div class="col-md-4">
           <div class="box" >
-            <a href="https://keeper-app123.netlify.app/">
+            <a href="https://i-notebook-three.vercel.app/home">
               <div class="card our-services settings">
                 <img
                   class="card-img-top"
-                  src="images/keep.png"
+                  src="images/iNotebook.png"
                   alt="Card image cap"
                 />
                 <div class="card-body">
-                  <h4>Keep-app</h4>
+                  <h4>iNotebook-app</h4>
                 </div>
               </div>
             </a>
